Fix scroll visibility on admonitionblock
Closed #18

--- a/src/main/sass/spring/_asciidoctor.scss
+++ b/src/main/sass/spring/_asciidoctor.scss
@@ -1586,7 +1586,7 @@ b.conum * {
   margin: 30px 0;
   width: auto;
   border-radius: 4px;
-  overflow-x: scroll;
+  overflow-x: auto;
   &.important {
     border-left: 0px solid #e20000;
     background-color: #f9ebeb;
